--- a/server/src/config/templates/mediaupload.xhtml
+++ b/server/src/config/templates/mediaupload.xhtml
@@ -10,9 +10,9 @@ Changelog: Vibhu Patel - Aut UpStage 2011
 
 <div id="mediaup">
 	<h1>What type of media are you adding?</h1>
-	<!-- 
-	<p>Choose a name and upload the file(s).<br />For audio use wav and mp3 files.<br />For avatars, backdrops and props use either .jpgs, .swfs, .pngs or .gifs</p>
-	-->
+	
+	<p>Choose a name and upload the file(s).<br />For audio use mp3 files.<br />For avatars, backdrops and props use either .jpgs, .swfs, .pngs or .gifs</p>
+	
 </div>
 
 <!-- FIXME naming a form 'natasha' seems not appropriate - better name it for what it actually does, probably something like 'form_mediaupload' ... -->
