Use JQuery to submit replace media form

--- a/server/src/config/templates/mediaedit.xhtml
+++ b/server/src/config/templates/mediaedit.xhtml
@@ -559,7 +559,7 @@
 			
 			<div class="dialogButtonRow">
 				<input type="button" class="buttonClose button-standard" id="buttonExecuteReplaceCancel" value="Cancel" />
-				<input type="submit" class="button-standard" id="buttonExecuteReplace" value="Replace" onclick="checkFieldsBeforeReplace(); return sendPostAction();"/>
+				<input type="button" class="button-standard" id="buttonExecuteReplace" value="Replace"/>
 			</div>
 
 			</form>
