Use new media dictionaries' keys format to support media replacing with cache enabled

--- a/server/src/config/templates/mediaedit.xhtml
+++ b/server/src/config/templates/mediaedit.xhtml
@@ -476,6 +476,7 @@
 				<input type="hidden" name="imagetype" id="imagetype" value="upload" />
 				<input type="hidden" name="audio_type" id="audio_type" value="" />
 				<input type="hidden" name="oldfile" id="oldfile" value="" />
+				<input type="hidden" name="key" id="key" value="" />
 
 				<div id="avatarBits" style="display: none;">
 			
