--- a/server/src/config/templates/mediaupload.xhtml
+++ b/server/src/config/templates/mediaupload.xhtml
@@ -76,17 +76,17 @@ Changelog: Vibhu Patel - Aut UpStage 2011
 				<div id="voiceselection" class="fieldrow">
 				
 					<label for="voice">Voice:</label>
-					<select name="voice" size="1" id="voice" style="width:100px" onchange="javascript:resetAvatarErrorMessages();checkVoiceTest();">%(voice_list)s</select>
+					<select name="voice" size="1" id="voice" style="width:100px" onchange="javascript:resetAvatarErrorMessages();checkUploadVoiceTest();">%(voice_list)s</select>
 					
-					<div id="voiceTestPanel" style="display:none">
-						<input type="text" name="text" id="text" maxlength="128" value="The quick brown fox jumps over the lazy dog" style="width:45%"/>
-					 	<input type="button" onclick="voiceTest(); return false;" value="Test voice"  id="buttonTestVoice" />
-					 	<input type="button" onclick="javascript:resetVoiceTest();return false;" value="Cancel" style="display:none" id="cancelVoiceTest" />
-						<div id="voicetest"> 
-					        <div id="voicediv"></div>
-					        <div id="voiceerror"></div>
-						</div>
-					</div>
+					<div id="uploadVoiceTestPanel" style="display:inline; ">
+                            <input type="text" name="text" id="uploadVoiceText" maxlength="128" value="The quick brown fox jumps over the lazy dog" style="width:45%"/>
+                            <input type="button" onclick="uploadVoiceTest(); return false;" value="Test voice"  id="uploadButtonTestVoice" />
+                            <input type="button" onclick="javascript:resetUploadVoiceTest();return false;" value="Cancel" style="display:none" id="uploadCancelVoiceTest" />
+                            <div id="uploadVoicetest" style="display:inline; visibility:hidden" height="20px"> 
+                                <div id="uploadVoicediv" style="display:block"></div>
+                                <div id="uploadVoiceerror"></div>
+                            </div>
+                        </div>
 				 
 				 </div>
 				
