--- a/server/src/config/templates/user.xhtml
+++ b/server/src/config/templates/user.xhtml
@@ -4,7 +4,7 @@
 <div id="editplayer">
 <form name="nick" action="%(req:path)s" >
 <input type="hidden" name="username" size="16" value="%(user)s" />
-<input type="hidden" name="is_su" size="16" value="%(can_su)s" />
+<input type="hidden" name="is_superuser" size="16" value="%(is_superuser)s" />
 
 <h2>Details for %(user)s:</h2>
 
