--- a/server/src/config/templates/mediaupload.xhtml
+++ b/server/src/config/templates/mediaupload.xhtml
@@ -6,6 +6,7 @@ Changelog: Vibhu Patel - Aut UpStage 2011
 	Vibhu Patel 22/07/2011 - Modified layout but adding additonal tables.
 	Heath, Corey, Karena 26/08/2011 - Added tags input so tags can be added to media when uploaded
 	David Daniels 25/09/2013 - renamed form natasha to mediauploadform
+    Lisa Helm and Vanessa Henderson (17/10/2013) changed user permissions to fit with new scheme
 -->
 <script type ="text/javascript">document.title="UpStage Add Media";</script>
 
@@ -20,7 +21,7 @@ Changelog: Vibhu Patel - Aut UpStage 2011
 	
 	<!-- meta data for form submit content -->
 	<input type="hidden" name="uploader" size="16" value="%(user)s" />
-	<input type="hidden" name="is_su" size="16" value="%(can_su)s" />
+	<input type="hidden" name="is_superuser" size="16" value="%(is_superuser)s" />
 	<input type="hidden" name="dateTime" size="16" value="%(datetime)s" />
 	<input type="hidden" name="assign" size="16" value="assignToStages" />
 	
