--- a/server/src/config/templates/stageedit.xhtml
+++ b/server/src/config/templates/stageedit.xhtml
@@ -35,6 +35,7 @@ Modified by David Daniels 22/05/2013 - fixed captials
 Modified by Vanessa Henderson 06/09/2013 - Changed the text displayed on the revert changes button
                                            - Swapped position of revert changes button and Delete button
 Modified by Lisa Helm 02/10/2013 - switched unassign/view media drop down boxes to select boxes
+Modified by Nitkalya  17/10/2013 - Modified popup message box and used the universal one
 -->
 <!include master_a.inc>
 <!include workshop_nav.inc>
@@ -44,9 +45,6 @@ window.onresize = resizePage;
 
 </script>
 
-<div id="divMessage">
-%(attr:message)s
-</div>
 <div id="stageselection">
 	<h1>Make a new stage, or select one to edit</h1>
 	<form name ="selectstage" action="%(req:path)s">
