Style stage edit page :)

--- a/server/src/config/templates/stageedit.xhtml
+++ b/server/src/config/templates/stageedit.xhtml
@@ -173,7 +173,7 @@ window.onresize = resizePage;
 										</select>
 									</td>
                                     <td style="width:0%;"><input type="button" id="seViewMedia" onclick="javascript:viewMediaImage();" value="Preview" /></td>
-                                    <td><div id="editStageMediaPreview"><!-- Craig Farrell 25/04/2013 -->
+                                    <td><div id="editStageMediaPreview">
                                         %(attr:stage_ViewImg)s
                                     </div></td>
 								</tr>
