--- a/server/src/config/templates/stageedit.xhtml
+++ b/server/src/config/templates/stageedit.xhtml
@@ -115,7 +115,7 @@ window.onresize = resizePage;
 			Show this stage on stage list?
             <br /> <br />
             <h1>Lock stage</h1> <!--#(01/05/2013)Craig-->
-			 %(attr:stage_CB_lock)s 
+			 %(attr:stage_lock)s 
 			Lock stage: only creator can edit the stage
             <br /> <br />
 			<h1>Background colour</h1>
@@ -229,7 +229,7 @@ window.onresize = resizePage;
 						  <input type="hidden" name="colors" id="colorvals" value="%(colours)s" />
                           <input type="hidden" name="onstagelistMsg" id="onstagelistMsg" class="onstageMsg" value="%(onStageList)s"/>
                           <input type="hidden" name="lockStageMsg" id="lockStageMsg"  value="%(lockStage)s"/><!--#(01/05/2013)Craig-->
-                          <input type="hidden" name="ownerMsg" id="ownerMsg"  value="%(IsOwner)s"/><!--#(01/05/2013)Craig-->
+                          <input type="hidden" name="ownerMsg" id="ownerMsg"  value="%(isOwner)s"/><!--#(01/05/2013)Craig-->
 						</td>
 					</tr>
 				</table>
