Set up default users, renamed rupert,, made usernames case insensitive

--- a/server/src/config/templates/editplayer.xhtml
+++ b/server/src/config/templates/editplayer.xhtml
@@ -2,7 +2,7 @@
 <!include workshop_nav.inc>
 <script type="text/javascript">document.title='Editing Player Details';</script>
 
-<form name="rupert">
+<form name="playerpanel">
 <input type="hidden" name="is_creator" size="16" value="%(is_creator)s" />
 
 <div class="topSearchBar">
