--- a/server/src/config/templates/newplayer.xhtml
+++ b/server/src/config/templates/newplayer.xhtml
@@ -7,7 +7,7 @@
 <br />	<!-- PQ: Added to match other pages and moved a few lines below to keep pages consistent -->
 <h1>Pick a username and password</h1><br/>
 
-<form name="rupert" action="%(req:path)s" >
+<form name="playerpanel" action="%(req:path)s" >
     <input type="hidden" name="is_creator" size="16" value="%(is_creator)s" />
     <table>
         <tr>
