--- a/server/src/config/templates/stageedit.xhtml
+++ b/server/src/config/templates/stageedit.xhtml
@@ -60,7 +60,7 @@ window.onresize = resizePage;
 </div>
 
 <div id="divForm">
-<form name="rupert" action="">
+<form name="stageedit" action="">
     <div id="nameandbuttons">
     <div id="editStageSubmit">
             <input type="hidden" name="action" value="" />
