Minor cosmetic changes, changed 'non-admin page' to 'player page'

--- a/server/src/config/templates/mediaupload.xhtml
+++ b/server/src/config/templates/mediaupload.xhtml
@@ -142,7 +142,7 @@ Changelog: Vibhu Patel - Aut UpStage 2011
        				<input type="radio" value="upload" id="uploadAvatarImage" name="chooseImage" checked="checked" onclick="showAvatarImageUpload()" />
        				<label for="uploadAvatarImage">Upload your own image(s)</label>
        				<input type="radio" value="library" id="libraryAvatarImage" name="chooseImage" onclick="hideAvatarImageUpload()" disabled="disabled" />
-       				<label for="libraryAvatarImage">Use builtin image</label>
+       				<label for="libraryAvatarImage">Use built-in image</label>
        			
        			</div>
       			
