--- a/server/src/config/templates/stageedit.xhtml
+++ b/server/src/config/templates/stageedit.xhtml
@@ -114,7 +114,7 @@ window.onresize = resizePage;
             <br /> <br />
             <h1>Lock stage</h1> <!--#(01/05/2013)Craig-->
 			 %(attr:stage_lock)s 
-			Lock stage: only creator can edit the stage
+			Lock stage: only stage owner can edit the stage
             <br /> <br />
 			<h1>Background colour</h1>
 			<table style="padding:5px">
@@ -143,7 +143,7 @@ window.onresize = resizePage;
 		<div id="editStageGeneral">
 		
 			<div id="editStageSplash">		
-				<h1>Splash message</h1>
+				<h1>Splash and welcome message</h1>
 				<textarea name="splash_message" class="splash" id="splash_message">%(splash)s</textarea>
 			</div>
             <br/>
