Fix player table layout

--- a/server/src/config/templates/editplayer.xhtml
+++ b/server/src/config/templates/editplayer.xhtml
@@ -19,7 +19,7 @@
 
 <div id="playerPanel">
 
-	<div id="listPanel">
+	<div id="listPanel" class="full">
 		<div class="playerList">
 			<table id='userTable'>
 				<tr>
