Fix my stupid mistakes and comment out log flooding stuff

--- a/server/src/config/templates/mediaedit.xhtml
+++ b/server/src/config/templates/mediaedit.xhtml
@@ -55,7 +55,7 @@
 
 		<div class="filterBlock">
 			<label for="filterType">Type:</label>
-			<select id="filterType" name="filterType" style="width:90px;" onchange="callAjaxGetData();">
+			<select id="filterType" name="filterType" style="width:90px;" onchange="mediumFilter();callAjaxGetData();">
 				<option value=""></option>
 				<option value="avatar">Avatar</option>
 				<option value="prop">Prop</option>
