Show permission level on user page, other minor cosmetic changes

--- a/server/src/config/templates/newplayer.xhtml
+++ b/server/src/config/templates/newplayer.xhtml
@@ -59,7 +59,7 @@
         </tr>
         <tr>
         <td><input type="radio" name="permissions" id="unlimitedmaker" /></td> 
-        <td><b>Unlimited Maker</b> - can create/edit stages, upload/edit media and has all Player permissions. Has no upload limit.</td>
+        <td><b>Unlimited Maker</b> - same as Maker, but with no upload limit.</td>
         </tr>
         <tr>
         <td><input type="radio" name="permissions" id="admin" /></td> 
