--- a/server/src/config/templates/user.xhtml
+++ b/server/src/config/templates/user.xhtml
@@ -17,6 +17,10 @@
                 <td><b>&nbsp;&nbsp;Your current contact email is:&nbsp;&nbsp;</b></td>
                 <td><i>&nbsp;&nbsp;%(email)s&nbsp;&nbsp;</i></td>
             </tr>
+            <tr>
+                <td><b>&nbsp;&nbsp;Your user permission level is:&nbsp;&nbsp;</b></td>
+                <td><i>&nbsp;&nbsp;%(permission)s&nbsp;&nbsp;</i></td>
+            </tr>
         </table>
         <div id="linebreak"></div>
 
