Filesize checking, code cleanup, fixed stage loading bug

--- a/server/src/config/templates/mediaupload.xhtml
+++ b/server/src/config/templates/mediaupload.xhtml
@@ -22,6 +22,7 @@ Changelog: Vibhu Patel - Aut UpStage 2011
 	<!-- meta data for form submit content -->
 	<input type="hidden" name="uploader" size="16" value="%(user)s" />
 	<input type="hidden" name="is_superuser" size="16" value="%(is_superuser)s" />
+    <input type="hidden" name="can_upload_big_file" size="16" value="%(can_upload_big_file)s" />
 	<input type="hidden" name="dateTime" size="16" value="%(datetime)s" />
 	<input type="hidden" name="assign" size="16" value="assignToStages" />
 	
