Fix tiny problem

--- a/server/src/config/templates/mediaedit.xhtml
+++ b/server/src/config/templates/mediaedit.xhtml
@@ -28,6 +28,7 @@
 <script type="text/javascript" src="/script/chosen/chosen.jquery.min.js"></script>
 <script type="text/javascript" src="/script/jquery.colorpicker/colorpicker.min.js"></script>
 
+<input type="hidden" name="can_upload_big_file" size="16" value="%(can_upload_big_file)s" id="can_upload_big_file"/>
 
 <h1 style="margin:15px 0;">Edit/View Media</h1>
 
